--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,36 @@
     <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg">
     <br>
     <b>Your Name</b>
-    <br> 100 followers
+    <br> 100 followers {% if showForm %}
+    <br>
+    <br>
+    <form action="/tweets" method="POST">
+      <label for="name_field">Name:</label>
+      <input name="name" type="text" id="name_field" value='{{ username }}' />
+      <br>
+      <label for="text_field">Text:</label>
+      <input name="text" type="text" id="text_field" style="width: 200px;" />
+      <br>
+      <br>
+      <input type="submit" value="Submit" />
+    </form>
+    {% endif %}
   </div>
   <div class="col-md-9">
 
     <!-- display tweets here -->
     {% for tweet in tweets %}
-    <li>{{tweet.content}}</li>
+    <div class="tweetbox">
+      <img>
+      <div class='content'>
+        <p class='by'>
+          <a href='/users/{{tweet.name}}'>{{tweet.name}}</a>
+        </p>
+        <p>
+          <a href='/tweets/{{tweet.id}}'>{{tweet.content}}</a>
+        </p>
+      </div>
+    </div>
     {% endfor %}
 
   </div>
